fixed hover error in header on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -214,6 +214,10 @@
     padding-top: 10px;
     text-align: center;
   }
+
+  .homei {
+    margin-top: 11px;
+  }
 }
 @media (max-width: 960px) and (min-width: 768px) {
   .header {
